2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[grok] Fix bug: Check that new branch was forward referenced.

	* b-grok.c (full): Keep track of branch references;
	check that new branches are properly forward-referenced.

2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[grok] Fix bug: Check that branches begin w/ branch point.

	* b-grok.c (full <revisions>): Check that
	branches begin with the branch point revision.

2010-11-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: For unchanged checkin on branch, prune ‘newdelta’.

	Expansion of 2010-11-14, "Fix bug: For
	unchanged checkin, invalidate ‘newdelta’".
	* ci.c (prune): New static func.
	(main): On unchanged checkin, use ‘prune’;
	incorporate ‘newdelta’ invalidation into ‘prune’.

2010-11-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: For unchanged checkin, invalidate ‘newdelta’.

	Regression introduced 2010-05-24, "Rewrite parsing".
	* ci.c (main): On unchanged checkin, where we have started
	to build the wrong new RCS file, invalidate ‘newdelta’.

2010-11-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Define ‘program_name’ for gnulib.

	* b-complain.c (program_name): New var.
	* b-complain.h (program_name): New var decl.
	* rcsutil.c (gnurcs_init): Set ‘program_name’.
	Reported by Klaus T. Aehlig.

2010-11-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Use ‘gr_revno’ more.

	Regression introduced 2010-05-08,
	"Add abstraction: delta_from_ref".
	* ci.c (addbranch): Take 4th arg TP_DELTAS; use ‘gr_revno’.
	(addelta): Update calls to ‘addbranch’.
	(main): Use ‘gr_revno’ instead of ‘delta_from_ref’.
	* rcs.c (setlock): Take arg TP_DELTAS; use ‘gr_revno’.
	(dolocks): Likewise; update calls to ‘setlock’.
	(domessages, rcs_setstate): Likewise.
	(main): Update calls to ‘dolocks’, ‘domessages’, ‘rcs_setstate’.

2010-11-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Incorporate ‘DELNUMFORM’ into unique use.

	* rcsgen.c (rcsgen.c): Use string directly for revno, "log".